Inclusão de tabs para alguns locais do sistema

--- a/VaccineC/src/app/pages/minha-conta/minha-conta.component.html
+++ b/VaccineC/src/app/pages/minha-conta/minha-conta.component.html
@@ -13,12 +13,11 @@
                             <p class="text-muted mb-1">john.doe@empresa.com</p>
                             <p class="text-muted mb-4">Desenvolvedor Full Stack</p>
                             <div class="d-flex justify-content-center mb-2">
-                                <app-confirm-modal>Loading ngx-bootstrap...</app-confirm-modal>
+                                <button type="button" class="btn btn-primary" mat-raised-button (click)="openDialog()">Alterar Senha</button>
                             </div>
                         </div>
                     </div>
                 </div>
-
 
                 <div class="col-lg-8">
                     <div class="card mb-4 is-card">
@@ -74,4 +73,3 @@
         </section>
     </div>
 </div>
-
