--- a/VaccineC/src/app/pages/ocupacoes/ocupacoes.component.html
+++ b/VaccineC/src/app/pages/ocupacoes/ocupacoes.component.html
@@ -2,6 +2,11 @@
     <app-side-menu></app-side-menu>
     <div id="content-wrapper" class="d-flex flex-column">
         <app-toolbar></app-toolbar>
-        <app-container titulo="Ocupações" caminho="Cadastros / Ocupações"></app-container>
+        <app-container titulo="Ocupações" caminho="Cadastros / Ocupações">
+            <mat-tab-group>
+                <mat-tab label="Pesquisa"> Pesquisa </mat-tab>
+                <mat-tab label="Cadastro"> Cadastro </mat-tab>
+              </mat-tab-group>
+        </app-container>
     </div>
 </div>
