--- a/VaccineC/src/app/shared/components/container/container.component.html
+++ b/VaccineC/src/app/shared/components/container/container.component.html
@@ -9,7 +9,7 @@
         <div class="is-section-content">
             <div class="is-card is-card-default-content">
                 <div class="is-card-body">
-
+                    <ng-content></ng-content>
                 </div>
             </div>
         </div>
