--- a/VaccineC/src/app/shared/components/container/container.component.scss
+++ b/VaccineC/src/app/shared/components/container/container.component.scss
@@ -67,3 +67,7 @@
     flex: 1 1 auto;
     padding: 1.3125rem 1.3125rem;
 }
+
+.is-section-content > .is-card > .is-card-body {
+    padding: 1.5em;
+}
