--- a/VaccineC/src/app/pages/pessoas/pessoas.component.html
+++ b/VaccineC/src/app/pages/pessoas/pessoas.component.html
@@ -2,6 +2,14 @@
     <app-side-menu></app-side-menu>
     <div id="content-wrapper" class="d-flex flex-column">
         <app-toolbar></app-toolbar>
-        <app-container titulo="Pessoas" caminho="Cadastros / Pessoas"></app-container>
+        <app-container titulo="Pessoas" caminho="Cadastros / Pessoas">
+            <mat-tab-group>
+                <mat-tab label="Pesquisa"> Pesquisa </mat-tab>
+                <mat-tab label="Cadastro"> Cadastro </mat-tab>
+                <mat-tab label="Complemento"> Complemento </mat-tab>
+                <mat-tab label="Telefones"> Telefones </mat-tab>
+                <mat-tab label="Endereços"> Endereços </mat-tab>
+              </mat-tab-group>
+        </app-container>
     </div>
 </div>
