Inclusão de tabs, reorganização de alguns recursos

--- a/VaccineC/src/app/pages/movimentar-estoque/movimentar-estoque.component.html
+++ b/VaccineC/src/app/pages/movimentar-estoque/movimentar-estoque.component.html
@@ -2,11 +2,11 @@
     <app-side-menu></app-side-menu>
     <div id="content-wrapper" class="d-flex flex-column">
         <app-toolbar></app-toolbar>
-        <app-container containerTitle="Ocupações" containerPath="Cadastros / Ocupações">
+        <app-container containerTitle="Movimentar Estoque" containerPath="Estoque / Movimentar Estoque">
             <mat-tab-group>
                 <mat-tab label="Pesquisa"> Pesquisa </mat-tab>
-                <mat-tab label="Cadastro"> Cadastro </mat-tab>
-              </mat-tab-group>
+                <mat-tab label="Movimento"> Movimento </mat-tab>
+            </mat-tab-group>
         </app-container>
     </div>
 </div>
