--- a/VaccineC/src/styles.scss
+++ b/VaccineC/src/styles.scss
@@ -3,6 +3,7 @@
 @import '~font-awesome/css/font-awesome.min.css';
 @import 'app/styles/css/style-global.min.css';
 @import 'app/styles/css/style-global.css';
+@import '@angular/material/prebuilt-themes/indigo-pink.css';
 
 html,
 body {
