--- a/VaccineC/src/app/pages/gerenciar-usuarios/gerenciar-usuarios.component.html
+++ b/VaccineC/src/app/pages/gerenciar-usuarios/gerenciar-usuarios.component.html
@@ -2,6 +2,12 @@
     <app-side-menu></app-side-menu>
     <div id="content-wrapper" class="d-flex flex-column">
         <app-toolbar></app-toolbar>
-        <app-container titulo="Gerenciar Usuários" caminho="Usuários / Gerenciar Usuários"></app-container>
+        <app-container containerTitle="Gerenciar Usuários" containerPath="Gerencial / Gerenciar Usuários">
+            <mat-tab-group>
+                <mat-tab label="Pesquisa"> Pesquisa </mat-tab>
+                <mat-tab label="Cadastro"> Cadastro </mat-tab>
+                <mat-tab label="Recursos"> Recursos </mat-tab>
+            </mat-tab-group>
+        </app-container>
     </div>
 </div>
