--- a/VaccineC/src/app/pages/orcamentos/orcamentos.component.html
+++ b/VaccineC/src/app/pages/orcamentos/orcamentos.component.html
@@ -2,6 +2,11 @@
     <app-side-menu></app-side-menu>
     <div id="content-wrapper" class="d-flex flex-column">
         <app-toolbar></app-toolbar>
-        <app-container titulo="Orçamentos" caminho="Operacional / Orçamentos"></app-container>
+        <app-container containerTitle="Orçamentos" containerPath="Operacional / Orçamentos">
+            <mat-tab-group>
+                <mat-tab label="Pesquisa"> Pesquisa </mat-tab>
+                <mat-tab label="Orçamento"> Orçamento </mat-tab>
+              </mat-tab-group>
+        </app-container>
     </div>
 </div>
