--- a/VaccineC/src/app/pages/prestadores/empresas.component.html
+++ b/VaccineC/src/app/pages/prestadores/empresas.component.html
@@ -2,12 +2,12 @@
     <app-side-menu></app-side-menu>
     <div id="content-wrapper" class="d-flex flex-column">
         <app-toolbar></app-toolbar>
-        <app-container containerTitle="Produto" containerPath="Cadastros / Produto">
+        <app-container containerTitle="Empresas" containerPath="Gerencial / Empresas">
             <mat-tab-group>
                 <mat-tab label="Pesquisa"> Pesquisa </mat-tab>
                 <mat-tab label="Cadastro"> Cadastro </mat-tab>
-                <mat-tab label="Aprazamento"> Aprazamento </mat-tab>
-                <mat-tab label="Resumo"> Resumo </mat-tab>
+                <mat-tab label="Parâmetros"> Parâmetros </mat-tab>
+                <mat-tab label="Agenda"> Agenda </mat-tab>
               </mat-tab-group>
         </app-container>
     </div>
