--- a/VaccineC/src/app/pages/recursos/recursos.component.html
+++ b/VaccineC/src/app/pages/recursos/recursos.component.html
@@ -2,13 +2,11 @@
     <app-side-menu></app-side-menu>
     <div id="content-wrapper" class="d-flex flex-column">
         <app-toolbar></app-toolbar>
-        <app-container containerTitle="Produto" containerPath="Cadastros / Produto">
+        <app-container containerTitle="Recursos" containerPath="Gerencial / Recursos">
             <mat-tab-group>
                 <mat-tab label="Pesquisa"> Pesquisa </mat-tab>
                 <mat-tab label="Cadastro"> Cadastro </mat-tab>
-                <mat-tab label="Aprazamento"> Aprazamento </mat-tab>
-                <mat-tab label="Resumo"> Resumo </mat-tab>
-              </mat-tab-group>
+            </mat-tab-group>
         </app-container>
     </div>
 </div>
