Início do CRUD de pessoas

--- a/VaccineC/src/app/pages/minha-conta/minha-conta.component.html
+++ b/VaccineC/src/app/pages/minha-conta/minha-conta.component.html
@@ -13,7 +13,7 @@
                             <p class="text-muted mb-1">john.doe@empresa.com</p>
                             <p class="text-muted mb-4">Desenvolvedor Full Stack</p>
                             <div class="d-flex justify-content-center mb-2">
-                                <button type="button" class="btn btn-primary" mat-raised-button (click)="openDialog()">Alterar Senha</button>
+                                <button type="button" class="mat-primary" mat-raised-button (click)="openDialog()">Alterar Senha</button>
                             </div>
                         </div>
                     </div>
