Continuação CRUD pessoas

--- a/VaccineC/src/app/pages/minha-conta/minha-conta.component.html
+++ b/VaccineC/src/app/pages/minha-conta/minha-conta.component.html
@@ -3,7 +3,7 @@
     <div id="content-wrapper" class="d-flex flex-column">
         <app-toolbar></app-toolbar>
         <section id="center" class="section-main is-content mt-5">
-            <div class="row">
+            <div class="row my-account-card">
                 <div class="col-lg-4">
                     <div class="card mb-4 is-card">
                         <div class="card-body text-center">
@@ -37,6 +37,15 @@
                                 </div>
                                 <div class="col-sm-9">
                                     <p class="text-muted mb-0">John Doe</p>
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <p class="mb-0 text-gray-800">Função</p>
+                                </div>
+                                <div class="col-sm-9">
+                                    <p class="text-muted mb-0">Aplicador</p>
                                 </div>
                             </div>
                             <hr>
