--- a/VaccineC/src/app/shared/components/container/container.component.html
+++ b/VaccineC/src/app/shared/components/container/container.component.html
@@ -1,5 +1,5 @@
 <section id="center" class="section-main">
-    <div id="is-content" class="flex-1 is-content">
+    <div id="is-content" class="flex-1 is-content is-content-grow">
         <div class="is-section-datail-header">
             <div class="d-flex is-container-header-section">
                 <h1 class="is-section-detail-header-title" id="title">{{containerTitle}}</h1>
