--- a/VaccineC/src/app/shared/components/footer/footer.component.html
+++ b/VaccineC/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer id="is-footer">
+<footer id="is-footer" class="is-footer-grow">
     <p class="is-author">
         © VacinneC Company - 2022
     </p>
