--- a/VaccineC/src/app/shared/components/side-menu/side-menu.component.html
+++ b/VaccineC/src/app/shared/components/side-menu/side-menu.component.html
@@ -107,6 +107,6 @@
         </li>
     </div>
 </ul>
-<div class="is-handle-expanded" id="sidebarToggle" (click)="toggleSideNav()">
+<div class="is-handle-expanded withdrawn" id="sidebarToggle" (click)="toggleSideNav()">
     <span class="is-icon-type-expanded"></span>
 </div>
