--- a/VaccineC/src/app/shared/components/toolbar/toolbar.component.html
+++ b/VaccineC/src/app/shared/components/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<nav id="home-topbar" class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
+<nav id="home-topbar" class="home-topbar-grow navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
     <!-- Topbar Search -->
     <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
         <div class="input-group">
