--- a/VaccineC/src/app/pages/formas-pagamento/formas-pagamento.component.html
+++ b/VaccineC/src/app/pages/formas-pagamento/formas-pagamento.component.html
@@ -1,12 +1,103 @@
 <div class="d-flex">
-    <app-side-menu></app-side-menu>
-    <div id="content-wrapper" class="d-flex flex-column">
-        <app-toolbar></app-toolbar>
-        <app-container containerTitle="Formas Pagamento" containerPath="Cadastros / Formas Pagamento">
-            <mat-tab-group>
-                <mat-tab label="Pesquisa"> Pesquisa </mat-tab>
-                <mat-tab label="Cadastro"> Cadastro </mat-tab>
-              </mat-tab-group>
-        </app-container>
-    </div>
+  <app-side-menu></app-side-menu>
+  <div id="content-wrapper"
+       class="d-flex flex-column">
+    <app-toolbar></app-toolbar>
+    <app-container containerTitle="Formas Pagamento"
+                   containerPath="Cadastros / Formas Pagamento">
+      <mat-tab-group>
+
+        <mat-tab label="Pesquisa">
+          <div class="search-group">
+            <div class="col-sm-11 p-0">
+                <mat-form-field class="search-form-field col-sm-10"
+                appearance="fill">
+                    <mat-label>Digite a forma de pagamento</mat-label>
+                    <input matInput
+                           type="text"
+                           [(ngModel)]="value">
+                    <button *ngIf="value"
+                            matSuffix
+                            mat-icon-button
+                            aria-label="Clear"
+                            (click)="value=''">
+                        <mat-icon>close</mat-icon>
+                    </button>
+                </mat-form-field>
+                <button id="mat-search-button" mat-raised-button color="primary">Pesquisar</button>
+            </div>
+          </div>
+
+          <div id="search-table">
+            <mat-table [dataSource]="dataSource" class="mat-elevation-z3 col-sm-11">
+
+              <ng-container matColumnDef="paymentForm">
+                <mat-header-cell *matHeaderCellDef> Forma de pagamento </mat-header-cell>
+                <mat-cell *matCellDef="let element"> {{ element.paymentForm }} </mat-cell>
+              </ng-container>
+
+              <ng-container matColumnDef="parcels">
+                <mat-header-cell *matHeaderCellDef> Parcelas</mat-header-cell>
+                <mat-cell *matCellDef="let element"> {{ element.parcels}} </mat-cell>
+              </ng-container>
+
+              <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+              <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+            </mat-table>
+          </div>
+        </mat-tab>
+
+        <mat-tab label="Cadastro">
+
+          <div class="registration-group">
+            <div class="offset-sm-1 col-sm-11 p-0">
+
+              <div class="example-container">
+                <mat-form-field appearance="fill"
+                                class="col-sm-11">
+                  <mat-label>Forma de pagamento</mat-label>
+                  <input matInput
+                         #input
+                         maxlength="10"
+                         placeholder="Forma de pagamento"
+                         id="paymentForm">
+                </mat-form-field>
+              </div>
+
+              <div class="example-container">
+                <mat-form-field appearance="fill"
+                                class="col-sm-11">
+                  <mat-label>Máximo de parcelas</mat-label>
+                  <input matInput
+                         #input
+                         maxlength="10"
+                         placeholder="Máximo de parcelas"
+                         id="parcels">
+                </mat-form-field>
+              </div>
+
+              <div class="example-container">
+                <mat-form-field class="example-full-width"
+                                appearance="fill"
+                                class="col-sm-11">
+                  <mat-label>Detalhes</mat-label>
+                  <textarea matInput
+                            placeholder="Informações complementares"
+                            id="details"></textarea>
+                </mat-form-field>
+              </div>
+
+
+              <div class="example-container example-button-row">
+                <button mat-raised-button color="primary">Salvar</button>
+                <button mat-raised-button color="warn">Excluir</button>
+              </div>
+
+            </div>
+          </div>
+        </mat-tab>
+
+      </mat-tab-group>
+    </app-container>
+  </div>
 </div>
