--- a/VaccineC/src/app/pages/recursos/recursos.component.html
+++ b/VaccineC/src/app/pages/recursos/recursos.component.html
@@ -4,8 +4,70 @@
         <app-toolbar></app-toolbar>
         <app-container containerTitle="Recursos" containerPath="Gerencial / Recursos">
             <mat-tab-group>
-                <mat-tab label="Pesquisa"> Pesquisa </mat-tab>
-                <mat-tab label="Cadastro"> Cadastro </mat-tab>
+                  <mat-tab label="Pesquisa">
+                    <div class="search-group">
+                        <div class="col-sm-11 p-0">
+                            <mat-form-field class="search-form-field col-sm-10" appearance="fill">
+                                <mat-label>Digite o nome do recurso</mat-label>
+                                <input matInput type="text" [(ngModel)]="value">
+                                <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
+                                    <mat-icon>close</mat-icon>
+                                </button>
+                            </mat-form-field>
+                            <button id="mat-search-button" mat-raised-button color="primary">Pesquisar</button>
+                        </div>
+                    </div>
+
+                    <div id="search-table">
+                        <mat-table [dataSource]="dataSource" class="mat-elevation-z3 col-sm-11">
+
+                            <ng-container matColumnDef="resourceName">
+                                <mat-header-cell *matHeaderCellDef> Recurso </mat-header-cell>
+                                <mat-cell *matCellDef="let element"> {{element.resourceName}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="resourceUrl">
+                                <mat-header-cell *matHeaderCellDef> Url </mat-header-cell>
+                                <mat-cell *matCellDef="let element"> {{element.resourceUrl}} </mat-cell>
+                            </ng-container>
+
+                            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+                        </mat-table>
+                    </div>
+                </mat-tab>
+
+                <mat-tab label="Cadastro">
+                  <div class="registration-group">
+                      <div class="offset-sm-1 col-sm-11 p-0">
+                          <div class="example-container">
+                              <mat-form-field appearance="fill" class="col-sm-6">
+                                  <mat-label>Recurso</mat-label>
+                                  <input matInput #input maxlength="10" placeholder="Pessoas" id="resources">
+                              </mat-form-field>
+
+                              <mat-form-field appearance="fill" class="col-sm-5 ml-0">
+                                <mat-label>Url</mat-label>
+                                <input matInput #input maxlength="10" placeholder="https://vaccinec.com.br/pessoas" id="url">
+                              </mat-form-field>
+                          </div>
+
+                          <div class="example-container">
+                              <mat-form-field class="example-full-width" appearance="fill" class="col-sm-11">
+                                  <mat-label>Detalhes</mat-label>
+                                  <textarea matInput placeholder="Informações complementares" id="details"></textarea>
+                              </mat-form-field>
+                          </div>
+
+
+                          <div class="example-container example-button-row">
+                              <button mat-raised-button color="primary">Salvar</button>
+                              <button mat-raised-button color="warn">Excluir</button>
+                          </div>
+
+                      </div>
+                  </div>
+              </mat-tab>
             </mat-tab-group>
         </app-container>
     </div>
